clusters/vollminlab-cluster/apps/portainer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    meta.helm.sh/release-name: portainer
    meta.helm.sh/release-namespace: portainer
  creationTimestamp: "2025-01-20T07:45:27Z"
  generation: 1
  labels:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: portainer
    app.kubernetes.io/version: ce-latest-ee-2.21.5
    helm.sh/chart: portainer-1.0.59
    io.portainer.kubernetes.application.stack: portainer
  name: portainer
  namespace: portainer
  resourceVersion: "4436550"
  uid: 33853f6d-818e-4f78-a250-41c5dde3cbe4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: portainer
      app.kubernetes.io/name: portainer
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app.kubernetes.io/instance: portainer
        app.kubernetes.io/name: portainer
    spec:
      containers:
      - args:
        - --tunnel-port=30776
        image: portainer/portainer-ce:2.21.5
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        name: portainer
        ports:
        - containerPort: 9000
          name: http
          protocol: TCP
        - containerPort: 9443
          name: https
          protocol: TCP
        - containerPort: 8000
          name: tcp-edge
          protocol: TCP
        readinessProbe:
          failureThreshold: 5
          httpGet:
            path: /
            port: 9443
            scheme: HTTPS
          initialDelaySeconds: 45
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: portainer-sa-clusteradmin
      serviceAccountName: portainer-sa-clusteradmin
      terminationGracePeriodSeconds: 30
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: portainer
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2025-01-20T07:45:27Z"
    lastUpdateTime: "2025-01-20T07:46:32Z"
    message: ReplicaSet "portainer-5dcb5fd574" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: "2025-02-08T06:35:00Z"
    lastUpdateTime: "2025-02-08T06:35:00Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
