clusters/vollminlab-cluster/apps/portainer/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    meta.helm.sh/release-name: portainer
    meta.helm.sh/release-namespace: portainer
  creationTimestamp: "2025-01-20T07:45:27Z"
  labels:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: portainer
    app.kubernetes.io/version: ce-latest-ee-2.21.5
    helm.sh/chart: portainer-1.0.59
    io.portainer.kubernetes.application.stack: portainer
  name: portainer
  namespace: portainer
  resourceVersion: "28195"
  uid: d9e0befd-e783-433f-9f99-d031a721c47c
spec:
  clusterIP: 10.111.167.204
  clusterIPs:
  - 10.111.167.204
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: http
    port: 9000
    protocol: TCP
    targetPort: 9000
  - name: https
    port: 9443
    protocol: TCP
    targetPort: 9443
  - name: edge
    port: 30776
    protocol: TCP
    targetPort: 30776
  selector:
    app.kubernetes.io/instance: portainer
    app.kubernetes.io/name: portainer
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
